Clean up for open source: Pydantic models, remove vendor references
- Replace jsonschema validation with Pydantic BaseModel classes (models.py)
- Remove all vendor-specific references (prompts, auth sources, defaults)
- Update LLM model from gpt-3.5-turbo to gpt-4o-mini
- Make subreddit a required parameter instead of hardcoded default
- Add .env.example for required secrets
- Update .gitignore for data directories
- Remove legacy run.sh and json_schemas.py
- Rename project to Forager

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,11 @@ MANIFEST
 .venv*/
 .conda*/
 
-# metaflow run data
-.metaflow/*
-data/*
-metaflow_card_cache/*
+# Environment
+.env
+
+# Data directories
+extract_output/
+summarise_output/
+publish_output/
+chroma_data/
