--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requests = "^2.31.0"
 praw = "^7.7.1"
 pydantic = "^2.0"
 openai = "^1.12.0"
+chromadb = ">=0.5.0,<1.0"
+python-telegram-bot = "^21.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
