Add GitHub Actions CI/CD: test on push, deploy to Fly.io on main

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ python-telegram-bot = "^21.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
+pytest = "^8.0"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["reddit_summariser"]
 
 [build-system]
 requires = ["poetry-core"]
