--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -28,10 +28,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+          key: venv-${{ runner.os }}-py3.12-${{ hashFiles('pyproject.toml') }}
 
       - name: Install dependencies
-        run: poetry install --no-interaction
+        run: |
+          poetry lock --regenerate --no-interaction
+          poetry install --no-interaction
 
       - name: Run tests
         run: poetry run pytest tests/ -v
@@ -50,4 +52,3 @@ jobs:
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
